--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "qywx-robot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/run.js",
   "scripts": {
+    "start": "node ./src/run",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
