--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "md5": "^2.2.1",
+    "node-schedule": "^1.3.2",
     "puppeteer": "^2.0.0"
   }
 }
